src/test/resources/type/good/string-addition.ml
"hello " + 2;

double d = 4.3;
d + " world";