src/test/resources/type/bad/double-inc.ml
double i = 1.1;
i++;